--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "autoprefixer": "^10.4.20",
     "axios": "^1.8.4",
     "gsap": "^3.12.7",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.507.0",
     "next": "^15.5.7",
     "postcss": "^8.5.3",
